# lmpy

./: .gitignore  README.md  main.py  pyproject.toml  smoke.py
grammars/: analysis_bool.gbnf  numerical_list.gbnf  thinking_bool.gbnf  variable_length_list.gbnf
src/lmpy/: __init__.py  client.py  config.py  model_detection.py  paths.py  response.py
src/lmpy/backends/: llamacpp_http.py
src/lmpy/message_builders/: __init__.py  base.py  factory.py  harmony.py  standard.py
src/lmpy/server/: manager.py
tests/: README.md  run_all_tests.py  test_conversations.py  test_grammar.py  test_harmony_vs_standard.py  test_multi_answers.py  test_parameters.py  test_single_answer.py  test_streaming.py  test_system_prompts.py  test_tokens.py  test_utils.py
